--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@tabler/icons-react": "^3.29.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.479.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.4.0",
     "next": "15.1.6",
