--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@heroicons/react": "^2.2.0",
     "@tabler/icons-react": "^3.29.0",
     "clsx": "^2.1.1",
+    "dotted-map": "^2.2.3",
     "lucide-react": "^0.479.0",
     "mini-svg-data-uri": "^1.4.4",
-    "motion": "^12.4.0",
+    "motion": "^12.0.0-alpha.2",
     "next": "15.1.6",
+    "next-themes": "^0.4.4",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
