--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@tabler/icons-react": "^3.29.0",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "dotted-map": "^2.2.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.479.0",
     "mini-svg-data-uri": "^1.4.4",
+    "mongoose": "^8.12.1",
     "motion": "^12.0.0-alpha.2",
     "next": "15.1.6",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
