--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@tabler/icons-react": "^3.29.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "dotted-map": "^2.2.3",
+    "googleapis": "^146.0.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.479.0",
     "mini-svg-data-uri": "^1.4.4",
