--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.7",
     "dotted-map": "^2.2.3",
     "googleapis": "^146.0.0",
+    "imagekitio-next": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.479.0",
     "mini-svg-data-uri": "^1.4.4",
@@ -29,6 +30,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-player": "^2.16.0",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
