--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "mini-svg-data-uri": "^1.4.4",
     "mongoose": "^8.12.1",
     "motion": "^12.0.0-alpha.2",
-    "next": "15.1.6",
+    "next": "^15.3.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "prop-types": "^15.8.1",
@@ -34,6 +34,10 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.16",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
